--- a/Projekat/TuristickaAgencija/SignUp.xaml
+++ b/Projekat/TuristickaAgencija/SignUp.xaml
@@ -1,16 +1,17 @@
 ﻿<Page
-    x:Class="TuristickaAgencija.Sign_up"
+    x:Class="TuristickaAgencija.SignUp"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TuristickaAgencija"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" Width="501.667" Height="384.333">
+    mc:Ignorable="d" Height="515" Width="750">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,230,115">
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="25"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="20"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -18,6 +19,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto" MinHeight="42"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
@@ -25,26 +27,32 @@
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="50"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Text="Ime: " Grid.Row="1" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Prezime: " Grid.Row="2" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Username: " Grid.Row="3" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Password: " Grid.Row="4" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
+        <TextBlock Text="Ime: " Grid.Row="2" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
+        <TextBlock Text="Prezime: " Grid.Row="3" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
+        <TextBlock Text="Username: " Grid.Row="4" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
         <TextBlock Text="Password: " Grid.Row="5" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Email: " Grid.Row="6" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Kontakt broj: " Grid.Row="7" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <Button x:Name="signUpDugme" Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Content="Sign up" Margin="5" HorizontalAlignment="Center"></Button>
+        <TextBlock Text="Password: " Grid.Row="6" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
+        <TextBlock Text="Email: " Grid.Row="7" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
+        <TextBlock Text="Kontakt broj: " Grid.Row="8" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
+        <Button x:Name="signUpDugme" Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Content="Sign up" Margin="75,5,74,5" HorizontalAlignment="Center" Height="32" Width="71"></Button>
+        <CommandBar Grid.Row="0" Grid.Column="4" HorizontalAlignment="Right" RenderTransformOrigin="0.523,0.521" Margin="0,0,-94.667,0" Width="120">
+            <AppBarButton Icon="Back" Label="Back" Click="AppBarButton_Click"></AppBarButton>
+        </CommandBar>
 
-        <TextBox x:Name="ime" Grid.Row="1" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="prezime" Grid.Row="2" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="username" Grid.Row="3" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="password" Grid.Row="4" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="password1" Grid.Row="5" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="eMail" Grid.Row="6" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="telefom" Grid.Row="7" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <Image x:Name="slika" Source="Assets/StoreLogo.png" Grid.Column="2" HorizontalAlignment="Left" Height="200" Margin="51,0,-143.667,0" Grid.Row="1" Grid.RowSpan="5" VerticalAlignment="Top" Width="200"/>
-        <Button x:Name="slikaDugme" Grid.Row="6" Grid.Column="2" Content="Izaberi sliku" Margin="108,5,-98.333,5" HorizontalAlignment="Center" VerticalAlignment="Center"></Button>
+
+        <TextBox x:Name="ime" Grid.Row="2" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
+        <TextBox x:Name="prezime" Grid.Row="3" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
+        <TextBox x:Name="username" Grid.Row="4" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
+        <TextBox x:Name="password" Grid.Row="5" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
+        <TextBox x:Name="password1" Grid.Row="6" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
+        <TextBox x:Name="eMail" Grid.Row="7" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
+        <TextBox x:Name="telefom" Grid.Row="8" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
+        <Image x:Name="slika" Source="Assets/StoreLogo.png" Grid.Column="2" HorizontalAlignment="Left" Height="200" Margin="65,0,-59.667,0" Grid.Row="3" Grid.RowSpan="5" VerticalAlignment="Top" Width="200" Grid.ColumnSpan="3"/>
+        <Button x:Name="slikaDugme" Grid.Row="8" Grid.Column="4" Content="Izaberi sliku" Margin="17.667,0,0.333,10" HorizontalAlignment="Center" VerticalAlignment="Center" Height="32" Width="98"/>
 
 
 
