--- a/Projekat/TuristickaAgencija/View/UnosPodataka.xaml
+++ b/Projekat/TuristickaAgencija/View/UnosPodataka.xaml
@@ -8,24 +8,19 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="107,117,0,0"  TextWrapping="Wrap" FontSize="30" Text="Choose your way of transport:" VerticalAlignment="Top" Height="52" Width="435"/>
-        <Grid Margin="107,142,1213,680">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="31*"/>
-                <RowDefinition Height="38*"/>
-            </Grid.RowDefinitions>
-            <RadioButton x:Name="radioButton" Content="Bus" FontSize="25" HorizontalAlignment="Left" VerticalAlignment="Top" Height="57" Width="120" Margin="10,30,-10,0" Grid.RowSpan="2"/>
-            <RadioButton x:Name="radioButton1" Content="Train" FontSize="25" HorizontalAlignment="Left" Margin="10,19,-10,0" VerticalAlignment="Top" Height="47" Grid.Row="1" Width="120"/>
-            <RadioButton x:Name="radioButton2" Content="Cruiser" FontSize="25" HorizontalAlignment="Left" Margin="10,70,-10,-43" VerticalAlignment="Top" Height="49" Grid.Row="1" Width="120"/>
-            <RadioButton x:Name="radioButton3" Content="Plane"  FontSize="25" HorizontalAlignment="Left" Margin="10,118,-10,-89" VerticalAlignment="Top" Height="47" Grid.Row="1" Width="120"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="107,69,0,0"  TextWrapping="Wrap" FontSize="30" Text="Choose your way of transport:" VerticalAlignment="Top" Height="52" Width="435"/>
 
-        </Grid>
-        <TextBlock x:Name="textBox" HorizontalAlignment="Left" Margin="107,445,0,0" TextWrapping="Wrap" FontSize="30" Text="How long are you planning to stay:" VerticalAlignment="Top" Width="508"/>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="107,500,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="49" Width="120" InputScope="Number"/>
-        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="238,507,0,0" TextWrapping="Wrap" Text="days" VerticalAlignment="Top" FontSize="25" RenderTransformOrigin="0.867,-0.15"/>
-        <Image x:Name="image" HorizontalAlignment="Left" Height="725" Margin="795,117,0,0" VerticalAlignment="Top" Width="495" />
-        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="107,639,0,0" TextWrapping="Wrap" Text="Date:" FontSize="30" VerticalAlignment="Top"/>
-        <DatePicker HorizontalAlignment="Left" Margin="107,684,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="radioButton" Content="Bus" FontSize="25" HorizontalAlignment="Left" VerticalAlignment="Top" Height="57" Width="120" Margin="107,115,0,0"/>
+        <RadioButton x:Name="radioButton1" Content="Train" FontSize="25" HorizontalAlignment="Left" Margin="107,160,0,0" VerticalAlignment="Top" Height="47" Width="120"/>
+        <RadioButton x:Name="radioButton2" Content="Cruiser" FontSize="25" HorizontalAlignment="Left" Margin="107,203,0,0" VerticalAlignment="Top" Height="49" Width="120"/>
+        <RadioButton x:Name="radioButton3" Content="Plane"  FontSize="25" HorizontalAlignment="Left" Margin="107,247,0,0" VerticalAlignment="Top" Height="47" Width="120"/>
+
+        <TextBlock x:Name="textBox" HorizontalAlignment="Left" Margin="107,311,0,0" TextWrapping="Wrap" FontSize="30" Text="How long are you planning to stay:" VerticalAlignment="Top" Width="508"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="107,372,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="49" Width="120" InputScope="Number"/>
+        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="232,380,0,0" TextWrapping="Wrap" Text="days" VerticalAlignment="Top" FontSize="25" RenderTransformOrigin="0.867,-0.15"/>
+        <Image x:Name="image" HorizontalAlignment="Left" Height="517" Margin="819,88,0,0" VerticalAlignment="Top" Width="379" />
+        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="107,451,0,0" TextWrapping="Wrap" Text="Date:" FontSize="30" VerticalAlignment="Top"/>
+        <DatePicker HorizontalAlignment="Left" Margin="107,496,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
