--- a/Projekat/TuristickaAgencija/View/SignUp.xaml
+++ b/Projekat/TuristickaAgencija/View/SignUp.xaml
@@ -1,58 +1,67 @@
 ﻿<Page
-    x:Class="TuristickaAgencija.SignUp"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TuristickaAgencija"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:View="using:TuristickaAgencija.View"
+    x:Class="TuristickaAgencija.SignUp"
     mc:Ignorable="d" Height="515" Width="750">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,210,95">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,200,95">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="20"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto" MinHeight="42"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" MinHeight="42"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
-            <ColumnDefinition Width="50"></ColumnDefinition>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="50"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Text="Ime: " Grid.Row="2" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Prezime: " Grid.Row="3" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Username: " Grid.Row="4" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Password: " Grid.Row="5" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Password: " Grid.Row="6" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Email: " Grid.Row="7" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <TextBlock Text="Kontakt broj: " Grid.Row="8" Grid.Column="0" MinWidth="100" Margin="5"></TextBlock>
-        <Button x:Name="signUpDugme" Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Content="Sign up" Margin="75,5,74,5" HorizontalAlignment="Center" Height="32" Width="71"></Button>
-        <CommandBar Grid.Row="0" Grid.Column="4" HorizontalAlignment="Right" RenderTransformOrigin="0.523,0.521" Margin="0,0,-94.667,0" Width="120">
-            <AppBarButton Icon="Back" Label="Back" Click="AppBarButton_Click"></AppBarButton>
+        <TextBlock Text="Ime: " Grid.Row="2" Grid.Column="0" MinWidth="100" Margin="5"/>
+        <TextBlock Text="Prezime: " Grid.Row="3" Grid.Column="0" MinWidth="100" Margin="5"/>
+        <TextBlock Text="Username: " Grid.Row="4" Grid.Column="0" MinWidth="100" Margin="5"/>
+        <TextBlock Text="Password: " Grid.Row="5" Grid.Column="0" MinWidth="100" Margin="5"/>
+        <TextBlock Text="Password: " Grid.Row="6" Grid.Column="0" MinWidth="100" Margin="5"/>
+        <TextBlock Text="Email: " Grid.Row="7" Grid.Column="0" MinWidth="100" Margin="5"/>
+        <TextBlock Text="Kontakt broj: " Grid.Row="8" Grid.Column="0" MinWidth="100" Margin="5"/>
+        <Button x:Name="signUpDugme" Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Content="Sign up" Margin="75,5,74,5" HorizontalAlignment="Center" Height="32" Width="71"/>
+        <CommandBar Grid.Row="0" Grid.Column="4" HorizontalAlignment="Right" RenderTransformOrigin="0.523,0.521" Margin="0,0,-101.333,0" Width="120" Grid.RowSpan="2">
+            <AppBarButton Icon="Back" Label="Back" Click="AppBarButton_Click"/>
         </CommandBar>
 
 
-        <TextBox x:Name="ime" Grid.Row="2" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="prezime" Grid.Row="3" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="username" Grid.Row="4" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="password" Grid.Row="5" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="password1" Grid.Row="6" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="eMail" Grid.Row="7" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        <TextBox x:Name="telefom" Grid.Row="8" Grid.Column="1" MinWidth="100" Margin="5"></TextBox>
-        
-        
+        <TextBox x:Name="ime" Grid.Row="2" Grid.Column="1" MinWidth="100" Margin="5"/>
+        <TextBox x:Name="prezime" Grid.Row="3" Grid.Column="1" MinWidth="100" Margin="5"/>
+        <TextBox x:Name="username" Grid.Row="4" Grid.Column="1" MinWidth="100" Margin="5"/>
+        <TextBox x:Name="password" Grid.Row="5" Grid.Column="1" MinWidth="100" Margin="5"/>
+        <TextBox x:Name="password1" Grid.Row="6" Grid.Column="1" MinWidth="100" Margin="5"/>
+        <TextBox x:Name="eMail" Grid.Row="7" Grid.Column="1" MinWidth="100" Margin="5"/>
+        <TextBox x:Name="telefom" Grid.Row="8" Grid.Column="1" MinWidth="100" Margin="5"/>
+
+
+
+
+
+
+
+        <View:SlikaUpload Grid.Column="4" HorizontalAlignment="Left" Margin="41,29,-42,0" VerticalAlignment="Top" Grid.Row="2" Grid.RowSpan="7"/>
+
+
 
 
 
